--- a/style.css
+++ b/style.css
@@ -74,7 +74,8 @@ img, video {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: clamp(2.5rem, 8vw, 5rem) 1rem clamp(1rem, 4vw, 2.5rem);
+    /* padding: clamp(2.5rem, 8vw, 5rem) 1rem clamp(1rem, 4vw, 2.5rem); */
+    padding: clamp(6.5rem, 9vw, 14rem) 1rem clamp(6rem, 5vw, 2.5rem);
     text-align: center;
     flex-shrink: 0;
     background-color: var(--primary-gold);
